Fix empty space issue between sidebar title and collapse icon for Info

--- a/src/demo/demo-components/DemoInfoSidebar/DemoInfoSidebar.css
+++ b/src/demo/demo-components/DemoInfoSidebar/DemoInfoSidebar.css
@@ -1,11 +1,11 @@
 .info-section {
     display: flex;
     flex-direction: column;
-    padding: 2vmin 2vmin;
+    padding: 3vmin 3vmin;
     width: 100%;
     background-color: #f5faf9;
     color: #161717;
-    margin-top: 2vmin;
+    margin-top: 1rem;
 }
 
 .arrowBack:hover {
